--- a/examples/ws/web/index.html
+++ b/examples/ws/web/index.html
@@ -8,7 +8,7 @@
     <h1>WS Client</h1>
     <script src="./sock_rpc.js"></script>
     <script>
-        const addr = `ws://localhost:8080/ws`
+        const addr = `ws://localhost:8990/ws`
         rpc = new SockRpc({
             addr: addr,
             onMessage: (evt) => {
@@ -36,7 +36,7 @@
                     a: 1,
                     b: 2,
                 }, data => {
-                    console.log('call success', data)
+                    console.log('call success', Base64.decode(data))
                 })
             }, 2000)
         })
