--- a/examples/ws/web/index.html
+++ b/examples/ws/web/index.html
@@ -7,6 +7,7 @@
 <body>
     <h1>WS Client</h1>
     <script src="./sock_rpc.js?112"></script>
+    <script src="./slice.js?112"></script>
     <script>
 
       
